--- a/MateCat-Bionic/MateCatApache/app_configs/config.ini
+++ b/MateCat-Bionic/MateCatApache/app_configs/config.ini
@@ -9,13 +9,13 @@ ENABLE_MULTI_DOMAIN_API = no
 
 DB_SERVER = "mysql"
 DB_DATABASE = "matecat"
-DB_USER = "admin"
-DB_PASS = "admin"
+DB_USER = "matecat"
+DB_PASS = "matecat01"
 AJAX_DOMAINS            = 5
 MEMCACHE_SERVERS = ""
 REDIS_SERVERS = "tcp://redis:6379"
-QUEUE_BROKER_ADDRESS = "tcp://amq:61613"
-QUEUE_DQF_ADDRESS = "tcp://amq:61613"
+QUEUE_BROKER_ADDRESS = "tcp://amq:61616"
+QUEUE_DQF_ADDRESS = "tcp://amq:61616"
 QUEUE_JMX_ADDRESS = "http://amq:8161"
 
 QUEUE_CREDENTIALS = "admin:admin"
@@ -39,15 +39,15 @@ MAX_NUM_FILES = 150
 SUPPORT_MAIL = "support@matecat.dock"
 
 [localhost]
-DB_SERVER = "localhost"
+DB_SERVER = "mysql"
 DB_DATABASE = "matecat"
 DB_USER = "matecat"
 DB_PASS = "matecat01"
 MEMCACHE_SERVERS = ""
-REDIS_SERVERS = "tcp://localhost:6379"
-QUEUE_BROKER_ADDRESS = "tcp://localhost:61613"
-QUEUE_DQF_ADDRESS = "tcp://localhost:61613"
-QUEUE_JMX_ADDRESS = "http://localhost:8161"
+REDIS_SERVERS = "tcp://redis:6379"
+QUEUE_BROKER_ADDRESS = "tcp://amq:61616"
+QUEUE_DQF_ADDRESS = "tcp://amq:61616"
+QUEUE_JMX_ADDRESS = "http://amq:8161"
 STORAGE_DIR = "/var/www/matecat/local_storage"
 CONVERSION_ENABLED = yes
 FORCE_XLIFF_CONVERSION = yes
